--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -45,15 +45,6 @@ h1.tagline {
   }
   &__header {
     font-weight: bold;
-
-    .twitter-handle {
-      background-color: #1da1f2;
-      border-radius: 8px;
-      padding: 0.25rem 0.75rem; // py-1 px-3
-      font-size: 0.875rem; // text-sm
-      color: white;
-      width: 90px;
-    }
   }
 
   &__input {
